@@ -1807,7 +1807,7 @@ local function update_dialog(d, sec)
 end
 
 function MODEL:action_edit_title()
-  local d = ipeui.Dialog(self.ui:win(), "Ipe: Edit page title and sections")
+  local d = ipeui.Dialog(self.ui:win(), "Ipe: Edit page title and sections", self.doc:properties().language)
   d:add("label1", "label", { label="Page title"}, 1, 1, 1, 4)
   d:add("title", "text", {}, 0, 1, 1, 4)
   d:add("label2", "label", { label="Sections"}, 0, 1, 1, 4)
@@ -1871,7 +1871,7 @@ function MODEL:action_edit_title()
 end
 
 function MODEL:action_edit_notes()
-  local d = ipeui.Dialog(self.ui:win(), "Ipe: Edit page notes")
+  local d = ipeui.Dialog(self.ui:win(), "Ipe: Edit page notes", self.doc:properties().language)
   d:add("label1", "label", { label="Page notes"}, 1, 1)
   d:add("notes", "text", {}, 0, 1)
   d:addButton("ok", "&Ok", "accept")
@@ -2741,7 +2741,7 @@ end
 function MODEL:action_document_properties()
   local engines = { "default", "pdftex", "xetex", "luatex" }
   local p = self.doc:properties()
-  local d = ipeui.Dialog(self.ui:win(), "Ipe document properties")
+  local d = ipeui.Dialog(self.ui:win(), "Ipe document properties", self.doc:properties().language)
   d:add("label1", "label", { label="Title"}, 1, 1)
   d:add("title", "input", {}, -1, 2, 1, 6)
   d:add("label2", "label", { label="Author"}, 0, 1)
@@ -2750,11 +2750,13 @@ function MODEL:action_document_properties()
   d:add("subject", "input", {}, -1, 2, 1, 6)
   d:add("label4", "label", { label="Keywords"}, 0, 1)
   d:add("keywords", "input", {}, -1, 2, 1, 6)
+  d:add("label4b", "label", { label="Language"}, 0, 1)
+  d:add("language", "input", {}, -1, 2, 1, 6)
   d:add("label5", "label", { label="Latex engine"}, 0, 1)
   d:add("tex", "combo", engines, -1, 2, 1, 6)
   d:add("label6", "label", { label="Latex preamble"}, 0, 1)
   d:add("preamble", "text", {}, -1, 2, 2, 6)
-  d:add("label7", "label", { label="Page mode"}, 8, 1)
+  d:add("label7", "label", { label="Page mode"}, 9, 1)
   d:add("fullscreen", "checkbox", { label="&Full screen"}, -1, 2)
   d:add("numberpages", "checkbox", { label="&Number pages"}, -1, 3)
   d:add("sequentialtext", "checkbox", { label="&Sequential text"}, -1, 4)
@@ -2767,7 +2769,7 @@ function MODEL:action_document_properties()
   d:addButton("ok", "&Ok", "accept")
   d:addButton("cancel", "&Cancel", "reject")
   d:setStretch("column", 5, 1)
-  d:setStretch("row", 7, 1)
+  d:setStretch("row", 8, 1)
   addEditorField(d, "preamble")
   for n in pairs(p) do d:set(n, p[n]) end
   if not d:execute() then return end
