@@ -118,7 +118,7 @@ static void buildControl(std::vector<short> &t, short what, const char *s = null
 
 class PDialog : public Dialog {
 public:
-  PDialog(lua_State *L0, WINID parent, const char *caption);
+  PDialog(lua_State *L0, WINID parent, const char *caption, const char *language);
   virtual ~PDialog();
 
 protected:
@@ -146,8 +146,9 @@ private:
   std::vector<int> iColWidth;
 };
 
-PDialog::PDialog(lua_State *L0, WINID parent, const char *caption)
-  : Dialog(L0, parent, caption)
+PDialog::PDialog(lua_State *L0, WINID parent, const char *caption,
+		 const char * language)
+  : Dialog(L0, parent, caption, language)
 {
   LONG base = GetDialogBaseUnits();
   iBaseX = LOWORD(base);
@@ -673,12 +674,15 @@ static int dialog_constructor(lua_State *L)
 {
   HWND parent = check_winid(L, 1);
   const char *s = luaL_checklstring(L, 2, nullptr);
+  const char *language = "";
+  if (lua_isstring(L, 3))
+    language = luaL_checkstring(L, 3);
 
   Dialog **dlg = (Dialog **) lua_newuserdata(L, sizeof(Dialog *));
   *dlg = nullptr;
   luaL_getmetatable(L, "Ipe.dialog");
   lua_setmetatable(L, -2);
-  *dlg = new PDialog(L, parent, s);
+  *dlg = new PDialog(L, parent, s, language);
   return 1;
 }
 
