@@ -11,6 +11,9 @@ Ipe 7.2.28
 
  * Add "-tolerance" option to iperender (#461).
 
+ * Store document language to enable appropriate spell checking
+   (#451).
+ 
 ----------------------------------------------------------------------
 
 Ipe 7.2.27 (2023-05-05)
